experimental/parser/testdata/parser/field/incomplete.proto.stderr.txt
error: unexpected identifier after definition
  --> testdata/parser/field/incomplete.proto:24:5
   |
24 |     foo.Bar name;
   |     ^^^ expected `;`

error: unexpected integer literal in definition
  --> testdata/parser/field/incomplete.proto:25:18
   |
25 |     foo.Bar name 1;
   |                  ^ expected `=`

error: unexpected `}` after definition
  --> testdata/parser/field/incomplete.proto:27:1
   |
27 | }
   | ^ expected `;`

encountered 3 errors